--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
   "files": [
     "dist"
   ],
+  "exports": {
+    ".": {
+      "types": "./dist/types/index.d.ts",
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js"
+    }
+  },
   "eslintConfig": {
     "extends": "./eslint.config.cjs"
   },
